# bazel_combine

./: .gitignore  Makefile  WORKSPACE
main/: BUILD
test/: BUILD  greet_test.cc
test/lib/: BUILD  Cargo.toml
test/lib/cargo/: BUILD.bazel  crates.bzl
test/lib/cargo/remote/: BUILD.rand_core-0.4.2.bazel
test/lib/others/: gap.rs
test/lib/src/: lib.rs
